// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the selectId to the input field in ComboboxField component 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <injectIntl(Combobox)
    allowClear={false}
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    inputId="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    required={false}
  >
    <Option
      disabled={false}
      display="Blue"
      value="blue"
    />
    <Option
      disabled={false}
      display="Green"
      value="green"
    />
    <Option
      disabled={false}
      display="Purple"
      value="purple"
    />
    <Option
      disabled={false}
      display="Red"
      value="red"
    />
    <Option
      disabled={false}
      display="Violet"
      value="violet"
    />
  </injectIntl(Combobox)>
</div>
`;

exports[`should render the selectId to the input field in MultiSelectField component 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <injectIntl(MultiSelect)
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    inputId="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    required={false}
  >
    <Option
      disabled={false}
      display="Blue"
      value="blue"
    />
    <Option
      disabled={false}
      display="Green"
      value="green"
    />
    <Option
      disabled={false}
      display="Purple"
      value="purple"
    />
    <Option
      disabled={false}
      display="Red"
      value="red"
    />
    <Option
      disabled={false}
      display="Violet"
      value="violet"
    />
  </injectIntl(MultiSelect)>
</div>
`;

exports[`should render the selectId to the input field in SearchSelectField component 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <injectIntl(SearchSelect)
    allowClear={false}
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    inputId="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    required={false}
  >
    <Option
      disabled={false}
      display="Blue"
      value="blue"
    />
    <Option
      disabled={false}
      display="Green"
      value="green"
    />
    <Option
      disabled={false}
      display="Purple"
      value="purple"
    />
    <Option
      disabled={false}
      display="Red"
      value="red"
    />
    <Option
      disabled={false}
      display="Violet"
      value="violet"
    />
  </injectIntl(SearchSelect)>
</div>
`;

exports[`should render the selectId to the input field in TagSelectField component 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <injectIntl(TagSelect)
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    inputId="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    required={false}
  >
    <Option
      disabled={false}
      display="Blue"
      value="blue"
    />
    <Option
      disabled={false}
      display="Green"
      value="green"
    />
    <Option
      disabled={false}
      display="Purple"
      value="purple"
    />
    <Option
      disabled={false}
      display="Red"
      value="red"
    />
    <Option
      disabled={false}
      display="Violet"
      value="violet"
    />
  </injectIntl(TagSelect)>
</div>
`;
